# PasswordWeb

./: LICENSE  README.md  app.py  database.sqlite  pyproject.toml  schema.py
.github/workflows/: codeql.yml
db/: db.py
src/: password.py
static/css/: style.css
static/js/: app.js
templates/: index.html
