[tool.poetry]
name = "passwordweb"
version = "0.1.0"
description = ""
authors = ["sendervision <sendervision@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
marshmallow = "^3.21.3"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
